<resources>
    <string name="app_name">SurePrep Dating</string>
    <string name="startup_button_login">Log In</string>
    <string name="startup_button_signup">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">I am a</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_nonbinary">Non-Binary</string>
    <string name="hint_preferred_gender">Seeking...</string>
    <string name="button_apply">Apply</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="hint_cpa">CPA</string>
    <string name="hint_taxpayer">Taxpayer</string>
    <string name="taxpayer_status">Are you a...</string>
    <string name="error_profile_incomplete">Please compelte your profile</string>
    <string name="hint_description">Add Your Description</string>
    <string name="hint_no_users">No available users</string>
</resources>