<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/photoIV"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:paddingBottom="8dp"
                android:src="@drawable/default_pic"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/photoIV"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTIL"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTIL"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_age"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/radio1Layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/ageTIL"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genderTV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/standard_height"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/hint_gender">
                </TextView>

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/standard_height"
                        android:layout_weight="2"
                        android:paddingBottom="8dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_male">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/radioFemale1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_female">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/radioNonbinary1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_nonbinary">

                        </RadioButton>

                    </RadioGroup>

            </LinearLayout>

            <!-- Preferences -->
            <LinearLayout
                android:id="@+id/radio2Layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio1Layout"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/preferredGenderTV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/standard_height"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:text="@string/hint_preferred_gender">
                </TextView>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/standard_height"
                    android:layout_weight="2"
                    android:paddingBottom="8dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/radioMale2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_male">

                    </CheckBox>

                    <CheckBox
                        android:id="@+id/radioFemale2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_female">

                    </CheckBox>

                    <CheckBox
                        android:id="@+id/radioNonbinary2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_nonbinary">

                    </CheckBox>

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/radio2Layout"
                android:text="@string/button_apply">

            </Button>

            <Button
                android:id="@+id/signoutButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/applyButton"
                android:text="@string/button_sign_out">

            </Button>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:background="#aaaaaaaa">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>